--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,18 +35,18 @@
       margin-bottom: 20px;
     }
 
-    .input-field {
+    .input-field, .modal-content {
       width: 80%;
       background-color: #ffffff;
       border-radius: 5px;
-      padding: 20px; /* Added padding for all sides */
+      padding: 20px;
       display: flex;
       flex-direction: column;
       margin: 20px 0;
     }
 
     input[type="text"], input[type="password"], input[type="date"], textarea, select {
-      width: calc(100% - 40px); /* Adjust width to account for padding */
+      width: calc(100% - 40px);
       padding: 10px;
       margin-bottom: 10px;
       border-radius: 5px;
@@ -54,7 +54,7 @@
     }
 
     button {
-      width: calc(100% - 40px); /* Ensure button aligns with inputs */
+      width: calc(100% - 40px);
       padding: 10px;
       background-color: #007BFF;
       color: white;
@@ -71,6 +71,7 @@
       border-bottom: 1px solid #e9ecef;
       padding: 8px;
       margin-bottom: 8px;
+      cursor: pointer;
     }
 
     .metadata {
@@ -101,7 +102,7 @@
 
     .edit-btn {
       right: 35px;
-      background-image: url('/Users/leejungbin/Downloads/StickyNote/src/main/resources/images/Edit.png'); /* Ensure you change path as needed */
+      background-image: url('/Users/leejungbin/Downloads/StickyNote/src/main/resources/images/Edit.png');
       background-size: cover;
       height: 18px;
       width: 18px;
@@ -109,10 +110,48 @@
 
     .delete-btn {
       right: 10px;
-      background-image: url('/Users/leejungbin/Downloads/StickyNote/src/main/resources/images/Delete.png'); /* Ensure you change path as needed */
+      background-image: url('/Users/leejungbin/Downloads/StickyNote/src/main/resources/images/Delete.png');
       background-size: cover;
       height: 18px;
       width: 18px;
+    }
+
+    /* 모달 창 스타일 */
+    .modal {
+      display: none; /* 기본적으로 숨김 */
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgb(0,0,0);
+      background-color: rgba(0,0,0,0.4); /* 검은색 배경에 약간의 투명도 */
+    }
+
+    /* 모달 컨텐츠 상자 스타일 */
+    .modal-content {
+      background-color: #fefefe;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+    }
+
+    /* 모달 닫기 버튼 */
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
     }
   </style>
 </head>
@@ -130,7 +169,7 @@
   <input type="text" id="author" placeholder="작성자">
   <input type="text" id="title" placeholder="제목">
   <input type="password" id="password" placeholder="비밀번호">
-  <input type="date" id="date">
+  <input type="date" id="date" value="">
   <textarea id="content" placeholder="내용"></textarea>
   <select id="category">
     <option value="">카테고리 선택</option>
@@ -139,6 +178,24 @@
     <option value="tomorrow">내일 할 일</option>
   </select>
   <button onclick="writePost()">Post Memo</button>
+</div>
+<!-- 검색창과 검색 결과 영역 -->
+<div>
+  <input type="text" id="search-input" placeholder="Search by title..." oninput="searchMemos()">
+  <div id="search-results" style="display: none;"></div>
+</div>
+<!-- 모달 창 -->
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>Memo Details</h2>
+    <p><strong>Title:</strong> <span id="modal-title"></span></p>
+    <p><strong>Author:</strong> <span id="modal-author"></span></p>
+    <p><strong>Date:</strong> <span id="modal-date"></span></p>
+    <p><strong>Content:</strong> <span id="modal-content"></span></p>
+    <button class="edit-btn" onclick="editMemo()">Edit</button>
+    <button class="delete-btn" onclick="deleteMemo()">Delete</button>
+  </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -161,7 +218,7 @@
 
   function addMemoToCategory(note) {
     let cardHtml = `
-      <div class="card">
+      <div class="card" onclick="showMemoDetails('${note.id}')">
         <div class="metadata">
           <span>${note.date}</span>
           <span>${note.author}</span>
@@ -229,6 +286,78 @@
       },
       error: function () {
         alert('Error deleting note');
+      }
+    });
+  }
+
+  // 모달 창을 열어 메모의 상세 정보를 보여주는 함수
+  function showMemoDetails(id) {
+    let card = $(`.card[data-id='${id}']`);
+    let title = card.find('.title').text();
+    let author = card.find('.metadata span:nth-child(2)').text();
+    let date = card.find('.metadata span:nth-child(1)').text();
+    let content = card.find('.contents').text();
+
+    $('#modal-title').text(title);
+    $('#modal-author').text(author);
+    $('#modal-date').text(date);
+    $('#modal-content').text(content);
+
+    // 모달을 연다
+    let modal = document.getElementById('myModal');
+    let span = document.getElementsByClassName("close")[0];
+
+    modal.style.display = "block";
+
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  }
+
+  function searchMemos() {
+    let keyword = $('#search-input').val().toLowerCase();
+    if (!keyword.trim()) {
+      $('#search-results').hide();
+      return;
+    }
+
+    $('#search-results').show().empty();
+
+    $.ajax({
+      type: 'GET',
+      url: '/api/notes',
+      success: function (notes) {
+        let filteredNotes = notes.filter(note =>
+                note.title.toLowerCase().includes(keyword)
+        );
+
+        if (filteredNotes.length === 0) {
+          $('#search-results').append('<p>No matching memos found.</p>');
+        } else {
+          filteredNotes.forEach(note => {
+            let cardHtml = `
+              <div class="card" onclick="showMemoDetails('${note.id}')">
+                <div class="metadata">
+                  <span>${note.date}</span>
+                  <span>${note.author}</span>
+                </div>
+                <div class="title">${note.title}</div>
+                <div class="contents">${note.content.substring(0, 100)}</div>
+                <button class="edit-btn" onclick="editMemo('${note.id}')">Edit</button>
+                <button class="delete-btn" onclick="deleteMemo('${note.id}')">Delete</button>
+              </div>`;
+            $('#search-results').append(cardHtml);
+          });
+        }
+      },
+      error: function () {
+        alert('Error searching memos');
       }
     });
   }
